#2258 Migrate HibernateMappingsGenerator to typeful metadata